--- a/configs/milvus.yaml
+++ b/configs/milvus.yaml
@@ -177,6 +177,7 @@ dataCoord:
     assignmentExpiration: 2000 # The time of the assignment expiration in ms 
 
   compaction:
+    enableAutoCompaction: false
     retentionDuration: 432000 # 5 days in seconds
 
   gc:
