[skip ci] Add fail ci for code coverage
Signed-off-by: Jenny Li <jing.li@zilliz.com>

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -74,3 +74,5 @@ jobs:
           token: ${{ secrets.CODECOV_TOKEN }}
           files: ./go_coverage.txt,./lcov_output.info
           name: ubuntu-${{ matrix.ubuntu }}-unittests
+          fail_ci_if_error: true
+
