--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -79,7 +79,7 @@ pull_request_rules:
       - base=master
       - title~=\[skip ci\]
       - label=kind/improvement
-      - -files~=^(?!.*\.(go|cpp)).*$
+      - files~=^(?!.*\.(go|cpp)).*$
     actions:
       label:
         add:
