--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -141,3 +141,14 @@ pull_request_rules:
         remove:
           - do-not-merge/missing-related-issue
 
+  - name: Test passed for skip e2e
+    conditions:
+      - base=master
+      - title~=\[skip e2e\]
+      - "status-success=Code Checker AMD64 Ubuntu 18.04"
+      - "status-success=Build and test AMD64 Ubuntu 18.04"
+      - -files~=^(?!.*\.(go|cpp)).*$
+    actions:
+      label:
+        add:
+          - ci-passed
