[skip ci] Use skip e2e instead of ci
Signed-off-by: Jenny Li <jing.li@zilliz.com>

--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -74,10 +74,10 @@ pull_request_rules:
         add:
           - ci-passed
 
-  - name: Test passed for title skip ci
+  - name: Test passed for title skip e2e
     conditions:
       - base=master
-      - title~=\[skip ci\]
+      - title~=\[skip e2e\]
       - label=kind/improvement
       - files~=^(?!.*\.(go|cpp)).*$
     actions:
