--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -171,6 +171,7 @@ pull_request_rules:
     conditions:
       - base=master
       - -files~=^(?!.*\.(go|cpp)).*$
+      - files~=^(?!internal\/.*_test\.go).*$
       - -title~=\[skip e2e\]
       - "status-success!=continuous-integration/jenkins/pr-merge"        
     actions:
