[skip e2e]Disable repo and tag as param
Signed-off-by: zhuwenxing <wenxing.zhu@zilliz.com>

--- a/tests/python_client/deploy/cluster-values.yaml
+++ b/tests/python_client/deploy/cluster-values.yaml
@@ -2,8 +2,8 @@ cluster:
   enabled: true
 image:
   all:
-    repository: ${IMAGE_REPO:-milvusdb/milvus-dev}
-    tag: ${IMAGE_TAG:-master-latest}
+    repository: milvusdb/milvus-dev
+    tag: master-latest
     pullPolicy: IfNotPresent
 etcd:
   replicaCount: 1
