[skip e2e] Update mergify Rule for jenkins passed non-code changed
Signed-off-by: Jenny Li <jing.li@zilliz.com>

--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -44,10 +44,10 @@ pull_request_rules:
         add:
           - ci-passed
   
-  - name: Test passed for tests scripts changed
+  - name: Test passed for non go or c++ code changed
     conditions:
       - base=master
-      - -files~=^(?!tests\/scripts).+
+      - files~=^(?!.*\.(go|h|cpp)).*$
       - "status-success=continuous-integration/jenkins/pr-merge"
     actions:
       label:
