--- a/internal/core/unittest/CMakeLists.txt
+++ b/internal/core/unittest/CMakeLists.txt
@@ -26,6 +26,7 @@ set(MILVUS_TEST_FILES
         test_concurrent_vector.cpp
         test_c_api.cpp
         test_expr_materialized_view.cpp
+        test_c_stream_reduce.cpp
         test_expr.cpp
         test_float16.cpp
         test_growing.cpp
