--- a/configs/advanced/etcd.yaml
+++ b/configs/advanced/etcd.yaml
@@ -153,5 +153,6 @@ log-outputs: [stderr]
 # Force to create a new one member cluster.
 force-new-cluster: false
 
-auto-compaction-mode: periodic
-auto-compaction-retention: "1"
+auto-compaction-mode: revision
+auto-compaction-retention: '1000'
+quota-backend-bytes: 4294967296
