--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -254,7 +254,7 @@ jobs:
         run: |
           ls -lah
       - name: Upload coverage to Codecov
-        if: "github.repository == 'milvus-io/milvus'"
+        if: ${{ github.repository == 'milvus-io/milvus' }}
         uses: codecov/codecov-action@v4
         id: upload_cov
         with:
@@ -264,7 +264,7 @@ jobs:
           fail_ci_if_error: true
           disable_safe_directory: true
       - name: Retry Upload coverage to Codecov
-        if: "${{ failure() }} && github.repository == 'milvus-io/milvus'"
+        if: ${{ failure()  && github.repository == 'milvus-io/milvus' }}
         uses: codecov/codecov-action@v4
         id: retry_upload_cov
         with:
