--- a/configs/milvus.yaml
+++ b/configs/milvus.yaml
@@ -306,7 +306,11 @@ queryNode:
     interimIndex: # build a vector temperate index for growing segment or binlog to accelerate search
       enableIndex: true
       nlist: 128 # segment index nlist
-      nprobe: 16 # nprobe to search segment, based on your accuracy requirement, must smaller than nlist
+      searchGranularity: 10 
+      # interim index will generate search parameters based on topk. 
+      # The larger the search granularity, the slower the search parameters change based on topk.
+      # searchGranularity should be in [1, nlist]
+      vecCompressRatio: 0.25 # compress vector size to vecCompressRatio * origin vector size, vecCompressRatio should be in [0.125, 1]
       memExpansionRate: 1.15 # the ratio of building interim index memory usage to raw data
       buildParallelRate: 0.5 # the ratio of building interim index parallel matched with cpu num
   loadMemoryUsageFactor: 1 # The multiply factor of calculating the memory usage while loading segments
