enhance: fix the dev docker yaml and use `go install` to install the gotestsum
Signed-off-by: SimFG <bang.fu@zilliz.com>

--- a/deployments/docker/dev/docker-compose-apple-silicon.yml
+++ b/deployments/docker/dev/docker-compose-apple-silicon.yml
@@ -53,7 +53,7 @@ services:
   azurite:
     image: mcr.microsoft.com/azure-storage/azurite
     volumes:
-      - ${DOCKER_VOLUME_DIRECTORY:-.}/volumes/azurite:/opt/azurite
+      - ${DOCKER_VOLUME_DIRECTORY:-.}/volumes/azurite:/data
     command: azurite-blob --blobHost 0.0.0.0
     ports:
       - "10000:10000"
