--- a/configs/milvus.yaml
+++ b/configs/milvus.yaml
@@ -641,6 +641,14 @@ quotaAndLimits:
   # collects metrics from Proxies, Query cluster and Data cluster.
   # seconds, (0 ~ 65536)
   quotaCenterCollectInterval: 3
+  limits:
+    allocRetryTimes: 15 # retry times when delete alloc forward data from rate limit failed
+    allocWaitInterval: 1000 # retry wait duration when delete alloc forward data rate failed, in millisecond
+    complexDeleteLimitEnable: false # whether complex delete check forward data by limiter
+    maxCollectionNum: 65536
+    maxCollectionNumPerDB: 65536
+    maxInsertSize: -1 # maximum size of a single insert request, in bytes, -1 means no limit
+    maxResourceGroupNumOfQueryNode: 1024 # maximum number of resource groups of query nodes
   ddl:
     enabled: false
     collectionRate: -1 # qps, default no limit, rate for CreateCollection, DropCollection, LoadCollection, ReleaseCollection
@@ -721,11 +729,6 @@ quotaAndLimits:
         max: -1 # qps, default no limit
       partition:
         max: -1 # qps, default no limit
-  limits:
-    maxCollectionNum: 65536
-    maxCollectionNumPerDB: 65536
-    maxInsertSize: -1 # maximum size of a single insert request, in bytes, -1 means no limit
-    maxResourceGroupNumOfQueryNode: 1024 # maximum number of resource groups of query nodes
   limitWriting:
     # forceDeny false means dml requests are allowed (except for some
     # specific conditions, such as memory of nodes to water marker), true means always reject all dml requests.
