--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -67,8 +67,9 @@ jobs:
           remove-android: 'true'
           remove-haskell: 'true'
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
         with:
+          ref: ${{ github.event.pull_request.head.sha }}
           fetch-depth: 0
       - name: 'Check Changed files'
         id: changed-files-cpp
