--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -18,7 +18,7 @@ on:
       - go.mod
       - '!**.md'
       - '!build/ci/jenkins/**'
-  pull_request_target:
+  pull_request:
     # file paths to consider in the event. Optional; defaults to all.
     paths:
       - 'scripts/**'
