fix: upload codecov result missing *.go files
Signed-off-by: PowderLi <min.li@zilliz.com>

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -240,6 +240,10 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 5
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       - name: Download Cpp code coverage results
         uses: actions/download-artifact@v3.0.1
         with:
